--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Note: this plugin will be added to Phonegap-android core very soon. :) Here is the forked project: https://github.com/anismiles/phonegap-android
+
+
 Websocket Android Plugin with Phonegap integration
 --------------------------------------------------
 
